overflow issue fixed/new styling

--- a/styles2.css
+++ b/styles2.css
@@ -350,7 +350,7 @@ body {font-family: "Lato", sans-serif;}
 }
 
 .poststyle {
-    margin-top: 2px; 
+    margin-top: 4px; 
     height: auto; 
     width:50%;
 }
